modules/015-admission-policy-engine/charts/constraint-templates/templates/operation/storage-class.yaml
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: d8storageclass
  labels:
    heritage: deckhouse
    module: admission-policy-engine
    security.deckhouse.io: operation-policy
  annotations:
    metadata.gatekeeper.sh/title: "Required Storage Class"
    metadata.gatekeeper.sh/version: 1.0.0
    description: "Required Storage Class"
spec:
  crd:
    spec:
      names:
        kind: D8StorageClass
      validation:
        openAPIV3Schema:
          type: object
          properties:
            storageClassNames:
              type: array
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      code:
        - engine: Rego
          source:
            version: "v1"
            rego: |
              package d8.operation_policies

              violation contains {"msg": msg} if {
                not input.review.operation == "DELETE"
                storageClass := input.review.object.spec.storageClassName
                not list_contains(input.parameters.storageClassNames, storageClass)
                msg := sprintf("PersistentVolumeClaim <%v> has invalid storage class: %v, allowed: %v", [input.review.object.metadata.name, storageClass, input.parameters.storageClassNames])
              }

              list_contains(list, elem) if {
                list[_] == elem
              }
