modules/015-admission-policy-engine/charts/constraint-templates/tests/storage-class/allowed.yaml
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: allowed
  namespace: default
spec:
  storageClassName: "foo"
