modules/015-admission-policy-engine/charts/constraint-templates/tests/storage-class/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: D8StorageClass
metadata:
  name: test
spec:
  enforcementAction: "deny"
  match:
    kinds:
      - apiGroups: ["", "storage", "storage.k8s.io"]
        kinds: ["PersistentVolumeClaim"]
  parameters:
    storageClassNames:
      - "foo"
      - "baz"
