modules/015-admission-policy-engine/charts/constraint-templates/tests/storage-class/disallowed.yaml
apiVersion: v1
kind: PersistentVolumeClaim
metadata:
  name: disallowed
  namespace: default
spec:
  storageClassName: "bar"
